# StockFlow

./: README.md  TODO.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: tauri.yaml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_create_processed_items.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: compute_stock.rs  mod.rs
src-tauri/src/errors/: detailed_error.rs  mod.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/stock_simulation/: commands.rs  date_parser.rs  mod.rs  models.rs  service.rs
src-tauri/src/models/: request.rs  response.rs
src-tauri/src/services/: date_parser.rs  mod.rs  stock_calculator.rs
src-tauri/src/tests/: mod.rs  stock_calculator_test.rs
src-tauri/tests/: stock_calculator_test.rs
src/components/AnalysisView/: AnalysisView.css  AnalysisView.test.tsx  AnalysisView.tsx  ErrorDisplay.css  ErrorDisplay.tsx  MetricsSummary.css  MetricsSummary.tsx  ModelParameters.css  ModelParameters.tsx  ProductSelector.css
src/components/ExportView/: ExportView.css  ExportView.test.tsx  ExportView.tsx
src/components/FileUpload/: FileList.tsx  (+5 more)
src/context/: AnalysisContext.tsx  ThemeContext.tsx
src/hooks/: useFileProcessor.ts  useHistory.ts  useModelForm.ts  useUpdateCheck.ts
src/model/: modelSchema.ts
src/styles/: theme.css
src/test/: TestProviders.tsx
src/utils/: fileParsers.ts  fileValidation.ts  formatNumber.ts  historyService.ts  numberFormatter.ts
(+39 files in other folders)
